fix: the company address text alignment in the footer

--- a/style.css
+++ b/style.css
@@ -1033,7 +1033,7 @@ ul {
   .footer .company-info {
     padding: 0;
     float: left;
-    width: 285px;
+    width: 336px;
     text-align: left;
   }
 }
